--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=408c34339a676740c23d783760d07cd5
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/GreenForce?serverVersion=5.7
+DATABASE_URL=mysql://root:@127.0.0.1:3306/greenforce?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
