--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,8 @@
 # app/config/security.yml
 security:
     encoders:
+        App/Entity/User:
+            algorithm: bcrypt
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
@@ -10,6 +12,10 @@ security:
     providers:
         fos_userbundle:
             id: fos_user.user_provider.username
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: email
 
     firewalls:
         main:
@@ -22,7 +28,15 @@ security:
 
             logout:       true
             anonymous:    true
+            provider: in_database
 
+            form_login:
+                login_path: security_login
+                check_path: security_login
+                #activate different ways to authenticate
+
+                #form_login: true
+                #https://symfony.com/doc/current/security/form_login_o.html
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
