--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,23 +20,21 @@ security:
     firewalls:
         main:
             pattern: ^/
+            provider: in_database
             form_login:
+                login_path: security_login
+                check_path: security_login
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
-
             logout:       true
+                    path: security_logout
+                    target: homepage
             anonymous:    true
-            provider: in_database
+            
 
-            form_login:
-                login_path: security_login
-                check_path: security_login
-                #activate different ways to authenticate
-
-                #form_login: true
-                #https://symfony.com/doc/current/security/form_login_o.html
+                
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
