--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,15 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\PlatformController::index
+
+login:
+    path: /login
+    controller: App\Controller\PlatformController::login
+
+dashboard:
+    path: /home
+    controller: App\Controller\PlatformController::dashboard
+
+    register:
+    path: /register
+    controller: App\Controller\PlatformController::register
