--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "friendsofsymfony/user-bundle": "~2.0",
+        "friendsofsymfony/user-bundle": "^2.1",
         "knplabs/knp-paginator-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
