--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -1,8 +1,13 @@
 # config/packages/fos_user.yaml
 fos_user:
+    resource: "@FOSUserBundle/Resource/config/routing/all.xml"
+
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
     user_class: App\Entity\User
     from_email:
         address: "test@domain.com"
         sender_name: "test@domain.com"
+
+        
+    
