--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ APP_SECRET=408c34339a676740c23d783760d07cd5
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/greenforce?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://greenforceforyou:AzertY2020@localhost
+###< symfony/swiftmailer-bundle ###
