--- a/.env
+++ b/.env
@@ -37,4 +37,7 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/greenforce?serverVersion=5.7
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://greenforceforyou:AzertY2020@localhost
+#MAILER_URL=gmail://greenforceforyou:AzertY2020@localhost?encryption=tls&auth_mode=oauth
+
+
 ###< symfony/swiftmailer-bundle ###
